<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.mrenesinau.layoutui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama" />
        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin" />
        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent" >
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pria" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wanita" />
        </RadioGroup>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_negara" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:entries="@array/asalnegara"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kemampuan Bahasa" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/chIndonesia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bahasa_indonesia" />
                <CheckBox
                    android:id="@+id/chInggris"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/inggris"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <CheckBox
                    android:id="@+id/chArab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/arab"
                    android:layout_weight="1" />
                <CheckBox
                    android:id="@+id/chMandarin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mandarin"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <CheckBox
                    android:id="@+id/chSunda"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunda"
                    android:layout_weight="1" />
                <CheckBox
                    android:id="@+id/chJawa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jawa"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/btnTampilkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tampilkan" />
        <Button
            android:id="@+id/btnKosongkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kosongkan" />
    </LinearLayout>



</ScrollView>
